Thu Mar 10 15:19:54 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* node.c (dump_option): nd_compile_option is a hidden hash object,
	  cannot call inspect on it.

Thu Mar 10 09:49:54 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/socket/test_socket.rb (test_udp_recvmsg_truncation):
	  AIX does not set the MSG_TRUNC flag for a message partially read
	  by recvmsg(2) with the MSG_PEEK flag set.

Wed Mar  9 16:48:45 2016  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: fix my last commit (syntax error).

Wed Mar  9 16:41:44 2016  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: fix output messages.

	* benchmark/memory_wrapper.rb: use respond_to? because
	  member? does not work well.

Wed Mar  9 16:20:25 2016  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: support memory usage benchmark.
	  use `--measure-target=[target]'.
	  Now, we can use the following targets:
	    * real (default): real time which returns process time in sec.
	    * peak: peak memory usage (physical memory) in bytes.
	    * size: last memory usage (physical memory) in bytes.

	* benchmark/memory_wrapper.rb: ditto.

Wed Mar  9 15:04:22 2016  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_vm3_gc_old_full.rb: add GC.start benchmark.

	* benchmark/bm_vm3_gc_old_immediate.rb: ditto.

	* benchmark/bm_vm3_gc_old_lazy.rb: ditto.

Wed Mar  9 14:59:11 2016  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: exit benchmarking if a benchmark process
	  receives signals.

Wed Mar  9 13:22:49 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/lib/memory_status.rb: make Memory::Status independent of
	  MiniTest::Skip.

	* test/lib/test/unit/assertions.rb (assert_no_memory_leak): skip
	  if Memory::Status is not available.

Wed Mar  9 09:19:55 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/io/wait/test_io_wait.rb (test_wait_readwrite_timeout):
	  select(2) in AIX returns "readable" for the write-side fd
	  of a pipe, so it is not possible to use a pipe to test