@@ -134,6 +134,7 @@ struct rb_compile_option_struct {
     unsigned int trace_instruction: 1;
     unsigned int frozen_string_literal: 1;
     unsigned int debug_frozen_string_literal: 1;
+    unsigned int coverage_enabled: 1;
     int debug_level;
 };
 
